fix topBar overflow

--- a/source/css/header.styl
+++ b/source/css/header.styl
@@ -12,14 +12,13 @@
   z-index 99
   display flex
   align-items center
-  padding 0 10px 0 10px
   font-family Monospace
   font-size 1.1em
   box-shadow 0 2px 5px rgba(0,0,0,0.92)
 
 .topBar .icon
   max-height 80%
-  margin-right 5px
+  margin 0 5px 0 5px
   transition max-height 1s
 .topBar .icon:hover
   max-height 95%
